DC. Stitchers. of Octrees. init. no effoptim.      ShaderProgram GEO shaders. +Norm, Wireframe renderer.